:lipstick: FIX table alignment

--- a/css/main.css
+++ b/css/main.css
@@ -200,7 +200,7 @@ td {
     margin: none;
 }
 
-.x-col {
+td:first-child {
     width: 140px;
 }
 
